--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ header {
     display:flex;
     justify-content: center;
     flex-direction: row;
-    margin: 18px 10px 18px 10px;
+    margin: 20px 10px;
 }
 
 
 .logo {
-    width: 23%;
-    padding: 1%;
+    width: 25%;
     text-align: center;
+    margin-left: 45px;
 }
 
 nav {
@@ -23,55 +23,143 @@ nav {
     justify-content: right;
     flex-direction: row;
     align-items: flex-end;
-    margin: 0 45px 25px 0;
+    margin: 45px 40px;
     font-family: "Avenir", Times, sans-serif;
-    font-size: 20px;
+    font-size: 25px;
+    text-decoration: none;
 }
 
+h1 {
+    font-family: "Avenir", Times, sans-serif;
+    margin: auto;
+    padding: 50px 0 80px 0;
+    font-size: 75px !important;
+    width: 65%;
+}
+
+#mainp {
+    width: 1200px;
+    color: blue;
+    padding-left: 250px;
+}
+
+#h1 {
+    width: 1200px;
+}
+
+h2 {
+    font-family: "Avenir", Times, sans-serif;
+    font-size: 50px !important;
+    padding: 25px 0 0 0;
+}
+
+h3{
+     font-family: "Avenir", Times, sans-serif;
+    font-size: 60px !important;
+    padding: 75px 0 0 0;
+}
+
+h4 {
+    font-family: "Avenir", Times, sans-serif;
+    font-size: 100px !important;
+    padding: 0 0 0 600px;
+}
 
 
 p {
     font-family: "Avenir", Times, sans-serif;
+    font-size: 22px;
+    width: 800px;
+    padding: 20px 0 0 0;
+    color: red;
 }
+
+.skills {
+    display: inline-block;
+    padding-left: 100px;
+}
+
+.job1 {
+    display: inline-block;
+    padding-left: 100px;
+}
+
+#job2 {
+    padding: 0 0 0 520px;
+    margin: -320px 0 0 0;
+}
+
+#job3 {
+    padding: 0 0 0 520px;
+}
+
+.keyboard {
+    width: 400px;
+   padding: 100px 0 40px 0;
+}
+
 
 .btn-nav {
     margin: 0 10px 0 10px;
     text-decoration: none;
     color: black;
-    padding: 0 8px;
+    padding: 0 30px;
 
 }
 
 .button {
-    margin: 0 0 15px 0;
+    margin: 0;
     font-family: "Avenir", Times, sans-serif;
     background-color:white;
-    padding: 15px 32px;
+    padding: 50px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    
+    font-size: 50px;  
+    flex-grow: 1;
+    flex-basis: auto; 
+    width: 50%;
+    border: none;
+
 }
 
+.UX {
+    background-color: teal;
+}
 
-.photo {
+.branding {
+    background-color: #E28647;
+}
+
+.pub {
+    background-color: lightskyblue;
+}
+
+.letterpress {
+    background-color: lightyellow;
+}
+
+.buttonflex {
     display: flex;
-    height: 400px;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .content {
-    margin: 0 auto;
+    margin: 0;
 }
 
 footer {
     background-color: #E28647;
-    height: 40px;
+    height: 70px;
     display: flex;
     justify-content: center;
     flex-direction: row;
     align-items: baseline;
     padding-top: 25px;
     width: 100%;
+}
+footer nav{
+    margin: 0 auto;
 }
