--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,51 @@ header {
     margin: 20px 10px;
 }
 
-
-.logo {
-    width: 25%;
+#logo {
+    object-fit: contain;
+    width: 230px;
     text-align: center;
-    margin-left: 45px;
+    margin: 0 480px 0 0;
 }
+
+@media only screen and (max-width: 600px) {
+    header {
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    .logo {
+        width: 50%;
+        text-align: center;
+        margin: 0 auto;
+        display: block;
+    }
+
+    nav {
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+        margin:  45px 0 45px 150px;
+        font-family: "Avenir", Times, sans-serif;
+        font-size: 25px;
+        text-decoration: none;
+    }
+
+    h1 {
+        font-family: "Avenir", Times, sans-serif;
+        margin: auto;
+        font-size: 15pt;
+    }
+  }
 
 nav {
     display: flex;
     justify-content: right;
     flex-direction: row;
     align-items: flex-end;
-    margin: 45px 40px;
+    margin:  45px 0 45px 150px;
     font-family: "Avenir", Times, sans-serif;
     font-size: 25px;
     text-decoration: none;
@@ -39,7 +71,6 @@ h1 {
 
 #mainp {
     width: 1200px;
-    color: blue;
     padding-left: 250px;
 }
 
@@ -71,7 +102,6 @@ p {
     font-size: 22px;
     width: 800px;
     padding: 20px 0 0 0;
-    color: red;
 }
 
 .skills {
@@ -82,10 +112,11 @@ p {
 .job1 {
     display: inline-block;
     padding-left: 100px;
+    margin: 100px 0 0 0;
 }
 
 #job2 {
-    padding: 0 0 0 520px;
+    padding: 100px 0 0 520px;
     margin: -320px 0 0 0;
 }
 
@@ -97,7 +128,6 @@ p {
     width: 400px;
    padding: 100px 0 40px 0;
 }
-
 
 .btn-nav {
     margin: 0 10px 0 10px;
@@ -120,6 +150,7 @@ p {
     flex-basis: auto; 
     width: 50%;
     border: none;
+
 
 }
 
@@ -162,4 +193,5 @@ footer {
 }
 footer nav{
     margin: 0 auto;
+    font-size: 20px;
 }
