--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header {
 #logo {
     object-fit: contain;
     width: 230px;
+    height: 101px;
     text-align: center;
     margin: 0 480px 0 0;
 }
